@@ -16,17 +16,18 @@
 
 package org.springframework.format.datetime.standard;
 
+import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.time.MonthDay;
 import java.time.OffsetDateTime;
 import java.time.OffsetTime;
+import java.time.YearMonth;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.TemporalAccessor;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -43,26 +44,24 @@ import org.springframework.util.StringUtils;
  *
  * @author Juergen Hoeller
  * @author Sam Brannen
+ * @author Kazuki Shimizu
  * @since 4.0
  * @see org.springframework.format.annotation.DateTimeFormat
  */
 public class Jsr310DateTimeFormatAnnotationFormatterFactory extends EmbeddedValueResolutionSupport
 		implements AnnotationFormatterFactory<DateTimeFormat> {
 
-	private static final Set<Class<?>> FIELD_TYPES;
-
-	static {
-		// Create the set of field types that may be annotated with @DateTimeFormat.
-		Set<Class<?>> fieldTypes = new HashSet<>(8);
-		fieldTypes.add(LocalDate.class);
-		fieldTypes.add(LocalTime.class);
-		fieldTypes.add(LocalDateTime.class);
-		fieldTypes.add(ZonedDateTime.class);
-		fieldTypes.add(OffsetDateTime.class);
-		fieldTypes.add(OffsetTime.class);
-		FIELD_TYPES = Collections.unmodifiableSet(fieldTypes);
-	}
-
+	// Create the set of field types that may be annotated with @DateTimeFormat.
+	private static final Set<Class<?>> FIELD_TYPES = Set.of(
+				Instant.class,
+				LocalDate.class,
+				LocalTime.class,
+				LocalDateTime.class,
+				ZonedDateTime.class,
+				OffsetDateTime.class,
+				OffsetTime.class,
+				YearMonth.class,
+				MonthDay.class);
 
 	@Override
 	public final Set<Class<?>> getFieldTypes() {
