@@ -17,7 +17,6 @@
 package org.springframework.web.reactive.resource;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -29,6 +28,7 @@ import reactor.core.publisher.Mono;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
+import org.springframework.core.log.LogFormatUtils;
 import org.springframework.lang.Nullable;
 import org.springframework.util.StringUtils;
 import org.springframework.web.server.ServerWebExchange;
@@ -120,12 +120,12 @@ public class PathResourceResolver extends AbstractResourceResolver {
 					return Mono.just(resource);
 				}
 				else if (logger.isWarnEnabled()) {
-					Object allowedLocationsText = (getAllowedLocations() != null ? Arrays.asList(getAllowedLocations()) : "[]");
-					logger.warn("""
-							Resource path "%s" was successfully resolved, but resource \
-							"%s" is neither under the current location "%s" nor under any \
-							of the allowed locations %s"\
-							""".formatted(resourcePath, resource.getURL(),location.getURL(), allowedLocationsText));
+					Resource[] allowed = getAllowedLocations();
+					logger.warn(LogFormatUtils.formatValue(
+							"Resource path \"" + resourcePath + "\" was successfully resolved " +
+									"but resource \"" + resource.getURL() + "\" is neither under the " +
+									"current location \"" + location.getURL() + "\" nor under any of the " +
+									"allowed locations " + (allowed != null ? Arrays.asList(allowed) : "[]"), -1, true));
 				}
 			}
 			return Mono.empty();
@@ -199,14 +199,15 @@ public class PathResourceResolver extends AbstractResourceResolver {
 		if (resourcePath.contains("%")) {
 			// Use URLDecoder (vs UriUtils) to preserve potentially decoded UTF-8 chars...
 			try {
-				String decodedPath = URLDecoder.decode(resourcePath, "UTF-8");
+				String decodedPath = URLDecoder.decode(resourcePath, StandardCharsets.UTF_8);
 				if (decodedPath.contains("../") || decodedPath.contains("..\\")) {
-					logger.warn("Resolved resource path contains encoded \"../\" or \"..\\\": " + resourcePath);
+					logger.warn(LogFormatUtils.formatValue(
+							"Resolved resource path contains encoded \"../\" or \"..\\\": " + resourcePath, -1, true));
 					return true;
 				}
 			}
-			catch (IllegalArgumentException | UnsupportedEncodingException ex) {
-				// Should never happen...
+			catch (IllegalArgumentException ex) {
+				// May not be possible to decode...
 			}
 		}
 		return false;
